# golang-repository-template

./: .gitignore  .golangci.yaml  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  go.mod
assets/: README.md
cmd/: BUILD.bazel  README.md  main.go
docs/: README.md
examples/: README.md
internal/: README.md
internal/private/: BUILD.bazel  example.go  example_test.go
pkg/: README.md
scripts/: README.md  install_golangci-lint.sh  install_useful_go_packages.sh
