load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main_app",
    srcs = ["main.go"],
    importpath = "golang-repository-template/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/external:external",
        "//internal/private:private",
    ],
)
