load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "private",
    srcs = ["example.go"],
    importpath = "golang-repository-template/internal/private",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "private_test",
    srcs = ["example_test.go"],
    embed = [":private"],
)
